<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sweet_mavka_script"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:text="@string/user_sign_up_label"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/user_input_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/round_outline_black"
            android:fontFamily="@font/calibri"
            android:hint="@string/user_login_hint"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/user_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/round_outline_black"
            android:fontFamily="@font/calibri"
            android:hint="@string/user_password_hint"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/user_input_password_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/round_outline_black"
            android:fontFamily="@font/calibri"
            android:hint="@string/user_password_repeat_hint"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/user_sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/round_outline"
            android:backgroundTint="@color/grey"
            android:fontFamily="@font/calibri"
            android:text="@string/user_sign_up_button"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>

</layout>