<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/user_layout_input"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/user_layout_sign_in"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sweet_mavka_script"
                android:gravity="center_horizontal"
                android:padding="20dp"
                android:text="@string/user_sign_in_label"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/user_input_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/round_outline_black"
                android:fontFamily="@font/calibri"
                android:hint="@string/user_login_hint"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/user_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/round_outline_black"
                android:fontFamily="@font/calibri"
                android:hint="@string/user_password_hint"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <Button
                android:id="@+id/user_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/round_outline"
                android:backgroundTint="@color/grey"
                android:fontFamily="@font/calibri"
                android:text="@string/user_sign_in_button"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_layout_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_layout_input">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/calibri"
                android:gravity="center_horizontal"
                android:text="@string/user_sign_up_note"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <Button
                android:id="@+id/user_sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/round_outline"
                android:backgroundTint="@color/grey"
                android:fontFamily="@font/calibri"
                android:text="@string/user_sign_up_button"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>